--- a/springboot-developer/build.gradle
+++ b/springboot-developer/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'me.hwangtaehun'
-version = '1.0'
+group 'me.hwangtaehun'
+version '1.0'
 sourceCompatibility = '17'
 
 repositories {
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.spring.framework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
